--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <body>
     <div class="container">
       <div class="top">
-        <div class="card stock"></div>
-        <div class="card talon"></div>
+        <div class="stock"></div>
+        <div class="talon"></div>
         <div class="foundations">
-          <div class="card ♦"><span>♦</span></div>
-          <div class="card ♥"><span>♥</span></div>
-          <div class="card ♠"><span>♠</span></div>
-          <div class="card ♣"><span>♣</span></div>
+          <div class="foundation ♦"><span>♦</span></div>
+          <div class="foundation ♥"><span>♥</span></div>
+          <div class="foundation ♠"><span>♠</span></div>
+          <div class="foundation ♣"><span>♣</span></div>
         </div>
       </div>
       <div class="tableau">
