--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="stock"></div>
         <div class="talon"></div>
         <div class="foundations">
-          <div class="foundation ♦"><span>♦</span></div>
-          <div class="foundation ♥"><span>♥</span></div>
-          <div class="foundation ♠"><span>♠</span></div>
-          <div class="foundation ♣"><span>♣</span></div>
+          <div class="foundation ♦"><p>♦</p></div>
+          <div class="foundation ♥"><p>♥</p></div>
+          <div class="foundation ♠"><p>♠</p></div>
+          <div class="foundation ♣"><p>♣</p></div>
         </div>
       </div>
       <div class="tableau">
